2002-01-12  Bruno Haible  <bruno@clisp.org>

	* gettext.c (main): Update year in --version output.
	* ngettext.c (main): Likewise.
	* msgattrib.c (main): Likewise.
	* msgcat.c (main): Likewise.
	* msgcmp.c (main): Likewise.
	* msgcomm.c (main): Likewise.
	* msgconv.c (main): Likewise.
	* msgen.c (main): Likewise.
	* msgexec.c (main): Likewise.
	* msgfilter.c (main): Likewise.
	* msgfmt.c (main): Likewise.
	* msggrep.c (main): Likewise.
	* msginit.c (main): Likewise.
	* msgmerge.c (main): Likewise.
	* msgunfmt.c (main): Likewise.
	* msguniq.c (main): Likewise.
	* xgettext.c (main): Likewise.

2002-01-11  Bruno Haible  <bruno@clisp.org>

	* write-po.c: Include po-charset.h.

2002-01-11  Bruno Haible  <bruno@clisp.org>

	* msgfmt.c (install_sigfpe_handler, uninstall_sigfpe_handler): On AIX,
	treat SIGTRAP like SIGFPE.

2002-01-09  Bruno Haible  <bruno@clisp.org>

	* msgfmt.c (USE_SIGINFO): New macro.
	(sigfpe_code, sigfpe_handler, install_sigfpe_handler,
	uninstall_sigfpe_handler, check_plural_eval): Use USE_SIGINFO instead
	of HAVE_SIGINFO.
	(install_sigfpe_handler, uninstall_sigfpe_handler): On Irix, treat
	SIGTRAP like SIGFPE.

2002-01-09  Bruno Haible  <bruno@clisp.org>

	* x-java.l (strip_ending_spaces): Fix logic.

2002-01-09  Tommy Johansson  <tommy.johansson@kanalen.org>

	* x-java.l: Avoid endless loop when encountering unterminated string.

2002-01-08  Bruno Haible  <bruno@clisp.org>

	* message.h (format_type): New enum value 'format_elisp'.
	(NFORMATS): Increment.
	* message.c (format_language): Add format_elisp entry.
	(format_language_pretty): Likewise.
	* format.h (formatstring_elisp): New declaration.
	* format-elisp.c: New file.
	* format.c (formatstring_parsers): Add formatstring_elisp.
	* x-elisp.h: New file.
	* x-elisp.c: New file.
	* xgettext.c: Include x-elisp.h.
	(main): Call x_elisp_extract_all, x_elisp_keyword.
	(usage): Mention the languages Lisp, EmacsLisp, librep.
	(language_to_scanner): Add elisp rule.